--- a/app/coursify-ai/static/SettingsStyle.css
+++ b/app/coursify-ai/static/SettingsStyle.css
@@ -365,3 +365,17 @@ button[type="submit"]:hover {
   display: none;
 }
 
+.flash{
+  position:fixed;
+  bottom: 0; 
+  right:0;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-weight: bold;
+  z-index: 1000;
+  display: none;
+}
+
