--- a/app/coursify-ai/static/SettingsStyle.css
+++ b/app/coursify-ai/static/SettingsStyle.css
@@ -367,14 +367,19 @@ button[type="submit"]:hover {
 
 #flash{
   position:fixed;
-  bottom: 0; 
-  right:0;
-  width: 100%;
+  /*bottom: 0; */
+  /*right:0; */
+  top: 120px;
+  right : -5px;
+  /*width: 100%;*/
   text-align: center;
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.7);
+  padding: 10px 20px;
+  /*background-color: rgba(65, 61, 61, 0.7); */
+  background-color: #666363;
   color: white;
   font-weight: bold;
-  z-index: 1000;
+  font-size: 15px;
+  z-index: 1000; 
+  border-radius: 5px;
 }
 
