Quiz Generation and Preview Done
Needs more work for UI and fixes for functionality

--- a/app/coursify-ai/static/style.css
+++ b/app/coursify-ai/static/style.css
@@ -61,8 +61,7 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-.left {
-}
+
 /* Bacck-button is a button that is used to go back to the previous page */
 .back-button {
   background-color: #555;
@@ -95,8 +94,6 @@ header {
   color: black;
 }
 
-.link_container a {
-}
 .link_container img {
   width: 5rem;
 }
@@ -554,4 +551,29 @@ button[type="submit"] {
   transition: background-color 0.3s;
   text-align: center;
   cursor: pointer;
+}
+.generate-quiz {
+  background-color: #555;
+  color: #fff;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  transition: background-color 0.3s;
+  text-align: center;
+  cursor: pointer;
+}
+
+.generate-quiz-link {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.generate-quiz-link:hover {
+  background-color: #0056b3;
 }
