--- a/app/coursify-ai/static/SettingsStyle.css
+++ b/app/coursify-ai/static/SettingsStyle.css
@@ -56,6 +56,33 @@ header {
   display: block;
 }
 
+.home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.left {
+}
+.left h1 {
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 2;
+  align-items: center;
+  display: block;
+}
+.left h2 {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  display: block;
+}
+
+.navbar a:hover {
+  color: black;
+}
+.link_container a {
+}
 .link_container img {
   width: 5rem;
 }
@@ -70,6 +97,63 @@ header {
   max-width: 800px;
 }
 
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: left;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+}
+
+.form-group input[type="number"],
+.form-group input[type="text"],
+.form-group input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-inline: 50px;
+}
+
+.form-group input[type="file"] {
+  cursor: pointer;
+}
+
+button[type="submit"] {
+  background-color: #555;
+  color: #fff;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  transition: background-color 0.3s;
+  text-align: center;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #444;
+}
+
 #footer {
   position: relative;
   text-align: center;
@@ -78,6 +162,32 @@ header {
   color: #fff;
   padding: 20px;
   width: 100%;
+}
+.right h1 {
+  align-items: center;
+  position: sticky;
+}
+.bx-menu {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+@media (max-width: 991px) {
+  .header {
+    padding: 2rem 3%;
+  }
+
+  section {
+    padding: 10rem 3% 2rem;
+  }
+
+  .footer {
+    padding: 2rem 3%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -153,15 +263,6 @@ header {
   padding: 30px;
   background-color: transparent;
   border-radius: 28px;
-  box-shadow:0 0 10px rgba(0, 0, 0, 0.2) ;
-}
-#password-settings-form {
-  max-width: 800px;
-  margin: 0 auto; /* Center the form */
-  padding: 30px;
-  background-color: transparent;
-  border-radius: 28px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 /* text fields on the side of the item name rather than under */
 .form-group {
@@ -171,7 +272,6 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
-  margin-left: 75px;
 }
 /* alligning the text fields */
 .form-group label {
@@ -179,7 +279,6 @@ header {
   width: 40%;
   min-width: 100px;
   margin-right: 10px;
-  font-weight:400;
 }
 
 .form-group input[type="text"],
@@ -187,19 +286,18 @@ header {
 .form-group input[type="password"],
 .form-group textarea,
 .form-group select {
-  /*flex-grow: 1;*/
-  padding: 7px;
+  flex-grow: 1;
+  padding: 8px;
   margin: 0;
-  width: 300px;
-  /*max-width: 50%;*/
-  border-radius: 10px;
-  box-sizing:content-box;
-  background-color: darkgray;
-  color: black;
-  margin-right: 90px;
+  width: auto;
+  max-width: 50%;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #fff;
 }
-
-
 
 /*----------------TO PLACE THE FORM ON THE RIGHT SIDE OF THE SCREEN ------------------------------------------*/
 .settings-container {
@@ -213,6 +311,15 @@ header {
 #settings-content {
   flex: 2;
 }
+
+/* HOVER EFFECTS    # for div id || . for class */
+
+.selected {
+  color: greenyellow;
+  font-weight: bold;
+  /* Smooth transition */
+}
+
 /* hovering over the menu changes the color*/
 .settings-list li a:hover {
   /*background-color: darkgray; */
@@ -225,33 +332,38 @@ header {
   font-weight: bold;
 }
 
+
 .settings-container {
   position: relative;
+  /* Other styling as needed */
 }
 
-button[type="submit"] {
-  background-color: #555;
-  color: #fff;
-  padding: 15px 30px;
-  border-radius: 10px;
-  font-weight: bold;
-  font-size: 18px;
-  transition: background-color 0.3s;
-  text-align: center;
-  cursor: pointer;
+.settings-form .form-group button[type="submit"] {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
 }
 
-button[type="submit"]:hover {
-  background-color: #444;
-}
+#image-preview-frame {
+  color: white;
+  font-weight: 300;
 
-.form-head{
-  margin-bottom: 50px;
+  width: 800px;
+  height: 200px;
+  overflow: hidden;
+  border: 1px dashed #000000;
   display: flex;
   justify-content: center;
-  font-size:x-large;
+  align-items: center;
 }
 
+
+#profile-picture-preview{
+  width: 100%;
+  height: 100%;
+  object-fit:fill;
+  display: none;
+}
 
 #flash{
   position:fixed;
