--- a/app/coursify-ai/static/stylehome.css
+++ b/app/coursify-ai/static/stylehome.css
@@ -1,7 +1,7 @@
 body, html {
     height: 100%;
     margin: 0;
-    background-image: url('Coursify.ai.png');
+    background-image: url('robotwithlogo.png');
     background-size: cover;
     background-position: center right; /* Align the background to the right */
     background-repeat: no-repeat;
@@ -26,7 +26,15 @@ body, html {
   h1 {
     color: #fff; /* White text */
     font-size: 2.2rem; /* Increased font size by 10% */
-    margin-bottom: 3rem; /* Increased distance between text and buttons */
+    /*margin-bottom: 1em;  Increased distance between text and buttons */
+    font-family: cursive;
+  }
+  p {
+    margin-top: none;
+    font-size: 1.2rem;
+    margin-bottom: 3em;
+    color: white;
+    font-family: cursive;
   }
   
   .btn {
@@ -36,6 +44,7 @@ body, html {
     border-radius: 0.5rem;
     transition: background-color 0.3s ease;
     text-decoration: none;
+    
   }
   
   .btn-coursify {
@@ -46,6 +55,10 @@ body, html {
   
   .btn-coursify:hover {
     background-color: #003d82; /* Darker shade of blue for hover effect */
+  }
+
+  .text-center{
+
   }
   /* Responsive adjustments */
   @media (max-width: 768px) {
