--- a/app/coursify-ai/static/styleIndex.css
+++ b/app/coursify-ai/static/styleIndex.css
@@ -93,6 +93,13 @@ header {
     padding-right:20px;
     border-bottom: 5px solid #1abc9c;
 }
+#homenav{
+    
+    margin-left: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: 5px solid #1abc9c;
+}
 .link_container img {
     width: 5rem;
 }
@@ -100,13 +107,14 @@ header {
 #title-box {
     text-align: center;
     background-color: #3e3f3f;
-    padding: 30px;
-    border-radius: 15px;
+    padding: 1.5em;
+    border-radius: 20px;
     color: #333;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     margin: 30px auto;
     max-width: 800px;
     margin-top: 20px;
+    margin-bottom: 0px; 
 }
 /* CHANGE */
 #gencon {
@@ -181,8 +189,9 @@ button[type="submit"]:hover {
     bottom: 0;
     background-color: var(--bg-color);
     color: #fff;
-    padding: 20px;
+    padding: 0px;
     width: 100%;
+    margin-top: 0px;
 }
 .right h1 {
     align-items: center;
@@ -194,8 +203,12 @@ button[type="submit"]:hover {
 
 @media (max-width: 1200px) {
     html {
-        font-size: 55%;
+        font-size: 40%;
     }
+    .left h1{
+        font-size: 5em;
+    }
+    
 }
 
 @media (max-width: 991px) {
