--- a/app/coursify-ai/static/styleMyCon.css
+++ b/app/coursify-ai/static/styleMyCon.css
@@ -10,6 +10,10 @@
     scroll-behavior: smooth;
     font-family: "Poppins", sans-serif;
 }
+#my-content{
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+}
 
 :root {
     --bg-color: #808080;
@@ -179,7 +183,7 @@ header {
 
 /*--------------------------------------------------------------------*/
 .content-header {
-    text-align: center;
+    text-align: left;
     margin-bottom: 2rem;
     color: #fff;
     padding: 10px 0;
@@ -187,7 +191,8 @@ header {
 
 .content-header h1 {
     font-size: 3rem;
-    margin-bottom: 0.5rem;
+    
+    font-weight: 500;
 }
 
 /* Responsive adjustments */
@@ -270,7 +275,7 @@ header {
 }
 
 .note-card {
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     margin-bottom: 1em;
     width: 30em;
@@ -294,25 +299,36 @@ header {
 }
 
 .note-title {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
-    color: #000000;
+    color: white;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-
+#detailTitle{
+    font-weight: 500;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    color:white;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .note-summary {
     font-size: 1rem;
     color: #666;
     margin-bottom: 1rem;
 }
-
 .notes-list {
-    flex-basis: 30%;
+    flex-basis: 22%;
     overflow-y: auto;
     height: 500px;
+    /* direction: rtl; */
+    scrollbar-color: #353434 #808080;
+    /* thumb and track color */
+    scrollbar-width:1em;
 }
 
 #note-details {
@@ -320,6 +336,20 @@ header {
     flex-grow: 1;
     align-items: center;
     justify-content: center;
+    margin-left: 1.5em;
+    border: 1px solid black;
+    border-radius: 2em;
+}
+#preview-instructions h1{
+    font-size:4em;
+    font-weight: 500;
+    justify-content: center;
+}
+#preview-instructions ul{
+    font-size: 2em;
+    font-weight: 500;
+    list-style-position: inside;
+    margin-left: 2em;
 }
 
 .note-content {
@@ -328,18 +358,20 @@ header {
     height: 100%;
     padding-top: 180px;
     position: relative;
-    background-color: transparent;
+    background-color: #555555;
+    border-radius: 2em;
 }
 
 .download-btn,
-.share-btn {
+.share-btn,.preview-btn{
     display: inline-block;
     background-color: #333;
     color: #fff;
     text-decoration: none;
     padding: 10px 15px;
-    border-radius: 5px;
+    border-radius: 15px;
     margin-top: 10px;
+    margin-right: 0.2em;
     transition: background-color 0.3s;
     width: 100px;
     height: 40px;
@@ -347,60 +379,81 @@ header {
     vertical-align: middle;
     font-size: 14px;
     cursor: pointer;
-}
-
-.preview-btn {
-    display: inline-block;
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    margin-top: 10px;
-    transition: background-color 0.3s;
-    width: 100px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 14px;
-    cursor: pointer;
+    font-weight: 300;
 }
 
 .delete-btn {
-    width: 202px;
+    display: inline-block;
+    width: 310px;
     height: 40px;
-    text-align: center;
     vertical-align: middle;
-    display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 36%;
-    margin-top: 1rem;
-    margin-right: 36%;
-}
-
-#deleteForm button {
+    margin-top: 0.5em;
+    border-radius: 15px;
     background-color: #333;
     font-size: 14px;
+    font-weight: 300;
     color: red;
 }
-
 #deleteForm button:hover {
-    background-color: #555555;
+    border-bottom: 5px solid red;
+}
+/*
+button[type="submit"] {
+    background-color: #555;
+    color: #fff;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: background-color 0.3s;
+    text-align: center;
+    cursor: pointer;
+} */
+.generate-quiz {
+    background-color: #555;
+    color: #fff;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: background-color 0.3s;
+    text-align: center;
+    cursor: pointer;
+}
+.generate-quiz-link {
+    display: inline-block;
+    width: 310px;
+    height: 40px;
+    padding: 10px;
+    /*background-color: #007bff;*/
+    color: white;
+    text-decoration: none; 
+    border-radius: 15px;
+    background-color: #333;
+    font-size: 14px;
+    font-weight: 300;
+    color: lightblue;
 }
 
+.generate-quiz-link:hover {
+    border-bottom: 5px solid lightblue;
+}
 .download-btn:hover {
-    background-color: #555555;
+    border-bottom: 5px solid #1abc9c;
 }
-
+.preview-btn:hover {
+    border-bottom: 5px solid #1abc9c;
+}
 .share-btn:hover {
-    background-color: #555555;
+    border-bottom: 5px solid #1abc9c;
 }
-
 #shareForm {
     background-color: #fff;
     padding: 20px;
-    margin-top: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     width: 300px;
@@ -410,6 +463,7 @@ header {
 #shareForm form {
     display: flex;
     flex-direction: column;
+    margin-top: 0%;
 }
 
 #shareForm label {
@@ -439,46 +493,7 @@ header {
     background-color: #555555;
 }
 
-button[type="submit"] {
-    /*button for content page, style lik above a href tages for preview and download buttons*/
-    background-color: #555;
-    color: #fff;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 18px;
-    transition: background-color 0.3s;
-    text-align: center;
-    cursor: pointer;
-}
 
-.generate-quiz {
-    background-color: #555;
-    color: #fff;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 18px;
-    transition: background-color 0.3s;
-    text-align: center;
-    cursor: pointer;
-}
-
-.generate-quiz-link {
-    display: inline-block;
-    margin: 5px;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.generate-quiz-link:hover {
-    background-color: #0056b3;
-}
 
 .info-button {
     background-color: #ddd;
@@ -508,7 +523,7 @@ button[type="submit"] {
 }
 
 #footer {
-    position: relative;
+    position: absolute;
     text-align: center;
     bottom: 0;
     background-color: var(--bg-color);
