UI changes to the AI assistant

--- a/app/coursify-ai/static/style2.css
+++ b/app/coursify-ai/static/style2.css
@@ -76,6 +76,9 @@ header {
 }
 /* Chat container styles */
 /* Chat container styles with border and shadow */
+#cb h1{
+  color: black;
+}
 #chat-container {
   width: 60%;
   max-width: 800px;
@@ -185,6 +188,11 @@ header {
   background-color: #666; /* Darker color on hover */
 }
 
+/*-------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------*/
 
 
 /* Sidebar Professional Styling */
